clusters/pk3s/paperless-ngx/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx-redis
  namespace: paperless-ngx
  labels:
    app: paperless-ngx-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx-redis
  template:
    metadata:
      labels:
        app: paperless-ngx-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 10
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 999
