clusters/pk3s/paperless-ngx/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-redis
  namespace: paperless-ngx
  labels:
    app: paperless-ngx-redis
spec:
  selector:
    app: paperless-ngx-redis
  ports:
    - port: 6379
      targetPort: 6379
