clusters/pk3s/paperless-ngx/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`paperless.local`)
      services:
        - name: paperless-ngx
          port: 8000
